@@ -57,6 +57,8 @@ implement in GXemul. Some items in this list are perhaps already fixed.
 
 	<li>More floating point tests?
 
+	<li>Look into the ARM bug mentioned a while ago in gxemul mailing list?
+
 	<li>Put the old HelenOS modes somewhere in the documentation?
 	
 	
